<resources>
    <string name="app_name">Sell Auto</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ads">Объявления</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="photo">Фото</string>
    <string name="ad_description">Данные объявления</string>
    <string name="ad_photo">Фото объявления</string>
    <string name="history_price">История цен</string>
    <string name="price_not_edit">Цена еще не менялась</string>
    <string name="title_activity_login">Войти</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="welcome">"Welcome !"</string>
    <string name="hello_user_profile">Добро пожаловать</string>
    <string name="user_first_name">Имя</string>
    <string name="user_last_name">Фамилия</string>
    <string name="user_email">Email</string>
    <string name="user_phone_number">Номер телефона</string>
    <string name="user_rating">Рейтинг</string>
    <string name="logout">Выйти</string>
    <string name="menu_my_ads">Мои объявления</string>
    <string name="delete">Удалить</string>

</resources>