<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ad_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@color/red_gray"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/photoViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="40dp"

                    android:layout_marginStart="-40dp"
                    android:layout_height="wrap_content"
                    android:background="@color/red_gray"
                    android:gravity="end">

                    <ImageButton
                        android:id="@+id/menu_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:backgroundTint="@color/red_gray"
                        android:contentDescription="Меню"
                        android:src="@drawable/ic_tree_dot_small_foreground"
                        android:visibility="invisible" />

                </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/ad_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="20dp"
                android:text="@string/ad_description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/adDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_item_ad_list"
                    android:padding="18dp"
                    android:text="@string/ad_description"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Информация от пользователя"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/adDescriptionUserDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape_item_ad_list"
                    android:padding="18dp"
                    android:text="@string/ad_description"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/history_price"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceNotEdited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="80dp"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/price_not_edit"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/historyPricesChart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginBottom="130dp" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="Ошибка загрузки"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>